--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,71 @@ nav {
 
 /* choose techwave */
 .choose-techwave{
+    max-width:1600px;
+    margin:0 auto;
+    padding:200px 120px;
+    background-color:#230E3D;
+    /* background:linear-gradient(to right,rgba(53,17,101,0.4)); */
 
+
+}
+
+.choose-techwave h2{
+    font-weight:bold;
+    font-size:3rem;
+    margin-bottom:40px;
+    text-align:center;
+    color:#ffffff;
+}
+
+.technology{
+    max-width:1200px;
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows:repeat(3,1fr);
+    gap:30px;
+    margin:0 auto;
+
+}
+
+.grid-box{
+    padding:40px;
+    display:flex;
+    flex-direction:column;
+    gap:16px;
+    justify-content: center;
+    background-color: rgba(53, 17, 101, 0.4);
+    border-radius: 40px;
+
+}
+
+.grid-box img{
+    width:60px;
+    height:60px;
+    
+}
+
+.grid-box h4{
+    font-weight:bold;
+    font-size:1.5rem;
+    text-align:left;
+    color:#ffffff;
+}
+
+.grid-box p{
+    font-weight:400;
+    font-size:1rem;
+    line-height:24px;
+    text-align:left;
+    color:rgb(152, 147, 147);
+}
+
+.headphone{
+    grid-row:span 2;
+}
+
+.mobile{
+    grid-column:span 2;
 }
 
 /* Responsiveness */
