--- a/styles/style.css
+++ b/styles/style.css
@@ -148,7 +148,7 @@ nav {
 
 
 /* choose techwave */
-.choose-techwave {
+.choose-techwave,.feature {
     max-width: 1600px;
     margin: 0 auto;
     padding: 200px 120px;
@@ -215,6 +215,9 @@ nav {
 .mobile {
     grid-column: span 2;
 }
+
+
+/* feature section */
 
 /* Responsiveness */
 @media screen and (max-width:640px) {
