--- a/src/output.css
+++ b/src/output.css
@@ -13,6 +13,8 @@
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-lg: 32rem;
+    --container-6xl: 72rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
@@ -213,6 +215,18 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
+  .my-5 {
+    margin-block: calc(var(--spacing) * 5);
+  }
+  .my-10 {
+    margin-block: calc(var(--spacing) * 10);
+  }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
@@ -240,8 +254,23 @@
   .h-\[150px\] {
     height: 150px;
   }
+  .h-full {
+    height: 100%;
+  }
+  .min-h-\[248px\] {
+    min-height: 248px;
+  }
+  .min-h-\[350px\] {
+    min-height: 350px;
+  }
+  .min-h-\[400px\] {
+    min-height: 400px;
+  }
   .w-5 {
     width: calc(var(--spacing) * 5);
+  }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
@@ -255,6 +284,9 @@
   .w-100 {
     width: calc(var(--spacing) * 100);
   }
+  .w-110 {
+    width: calc(var(--spacing) * 110);
+  }
   .w-150 {
     width: calc(var(--spacing) * 150);
   }
@@ -267,6 +299,18 @@
   .w-full {
     width: 100%;
   }
+  .max-w-6 {
+    max-width: calc(var(--spacing) * 6);
+  }
+  .max-w-6xl {
+    max-width: var(--container-6xl);
+  }
+  .max-w-64 {
+    max-width: calc(var(--spacing) * 64);
+  }
+  .max-w-65 {
+    max-width: calc(var(--spacing) * 65);
+  }
   .max-w-100 {
     max-width: calc(var(--spacing) * 100);
   }
@@ -278,6 +322,9 @@
   }
   .max-w-\[380px\] {
     max-width: 380px;
+  }
+  .max-w-lg {
+    max-width: var(--container-lg);
   }
   .flex-grow {
     flex-grow: 1;
@@ -314,6 +361,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -378,9 +428,24 @@
   .bg-\[\#250D44\] {
     background-color: #250D44;
   }
+  .bg-\[url\] {
+    background-color: url;
+  }
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[url\(\'\/assets\/footer-bg\.png\'\)\] {
+    background-image: url('/assets/footer-bg.png');
+  }
+  .bg-\[url\(\'assets\/\'\)\] {
+    background-image: url('assets/');
+  }
+  .bg-\[url\(\'assets\/f\'\)\] {
+    background-image: url('assets/f');
+  }
+  .bg-\[url\(\'assets\/footer-bg\.png\'\)\] {
+    background-image: url('assets/footer-bg.png');
   }
   .from-\[\#F7E93F\] {
     --tw-gradient-from: #F7E93F;
@@ -417,8 +482,26 @@
   .to-100\% {
     --tw-gradient-to-position: 100%;
   }
+  .bg-contain {
+    background-size: contain;
+  }
+  .bg-cover {
+    background-size: cover;
+  }
   .bg-clip-text {
     background-clip: text;
+  }
+  .bg-center {
+    background-position: center;
+  }
+  .bg-top {
+    background-position: top;
+  }
+  .bg-top-left {
+    background-position: left top;
+  }
+  .bg-no-repeat {
+    background-repeat: no-repeat;
   }
   .fill-current {
     fill: currentcolor;
@@ -426,11 +509,17 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
+  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
+  }
+  .p-30 {
+    padding: calc(var(--spacing) * 30);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -447,8 +536,20 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
+  }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
+  .py-16 {
+    padding-block: calc(var(--spacing) * 16);
+  }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
+  }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
   }
   .pb-3 {
     padding-bottom: calc(var(--spacing) * 3);
@@ -540,6 +641,12 @@
       color: color-mix(in oklab, var(--color-gray-400) 45%, transparent);
     }
   }
+  .text-gray-400\/50 {
+    color: color-mix(in srgb, oklch(70.7% 0.022 261.325) 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-gray-400) 50%, transparent);
+    }
+  }
   .text-gray-400\/70 {
     color: color-mix(in srgb, oklch(70.7% 0.022 261.325) 70%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -586,14 +693,44 @@
       display: none;
     }
   }
+  .sm\:min-h-\[450px\] {
+    @media (width >= 40rem) {
+      min-height: 450px;
+    }
+  }
   .sm\:w-\[150px\] {
     @media (width >= 40rem) {
       width: 150px;
     }
   }
+  .sm\:max-w-1 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 1);
+    }
+  }
+  .sm\:max-w-3 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 3);
+    }
+  }
+  .sm\:max-w-13 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 13);
+    }
+  }
+  .sm\:max-w-136 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 136);
+    }
+  }
   .sm\:max-w-300 {
     @media (width >= 40rem) {
       max-width: calc(var(--spacing) * 300);
+    }
+  }
+  .sm\:max-w-340 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 340);
     }
   }
   .sm\:max-w-400 {
@@ -611,9 +748,19 @@
       flex-direction: row;
     }
   }
+  .sm\:flex-nowrap {
+    @media (width >= 40rem) {
+      flex-wrap: nowrap;
+    }
+  }
   .sm\:items-center {
     @media (width >= 40rem) {
       align-items: center;
+    }
+  }
+  .sm\:justify-center {
+    @media (width >= 40rem) {
+      justify-content: center;
     }
   }
   .sm\:gap-6 {
@@ -651,6 +798,11 @@
       padding: calc(var(--spacing) * 10);
     }
   }
+  .sm\:p-30 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 30);
+    }
+  }
   .sm\:px-6 {
     @media (width >= 40rem) {
       padding-inline: calc(var(--spacing) * 6);
@@ -669,6 +821,11 @@
   .sm\:pb-3 {
     @media (width >= 40rem) {
       padding-bottom: calc(var(--spacing) * 3);
+    }
+  }
+  .sm\:text-left {
+    @media (width >= 40rem) {
+      text-align: left;
     }
   }
   .sm\:text-2xl {
@@ -699,6 +856,12 @@
     @media (width >= 40rem) {
       font-size: var(--text-lg);
       line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .sm\:text-xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .sm\:font-normal {
