--- a/src/output.css
+++ b/src/output.css
@@ -191,9 +191,6 @@
   }
 }
 @layer utilities {
-  .absolute {
-    position: absolute;
-  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -214,18 +211,6 @@
   }
   .mx-auto {
     margin-inline: auto;
-  }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
-  }
-  .my-5 {
-    margin-block: calc(var(--spacing) * 5);
-  }
-  .my-10 {
-    margin-block: calc(var(--spacing) * 10);
-  }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
   }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
@@ -257,23 +242,8 @@
   .h-full {
     height: 100%;
   }
-  .min-h-\[248px\] {
-    min-height: 248px;
-  }
-  .min-h-\[350px\] {
-    min-height: 350px;
-  }
-  .min-h-\[400px\] {
-    min-height: 400px;
-  }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
-  }
-  .w-8 {
-    width: calc(var(--spacing) * 8);
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
@@ -281,14 +251,8 @@
   .w-33 {
     width: calc(var(--spacing) * 33);
   }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
-  }
-  .w-110 {
-    width: calc(var(--spacing) * 110);
-  }
-  .w-150 {
-    width: calc(var(--spacing) * 150);
+  .w-53 {
+    width: calc(var(--spacing) * 53);
   }
   .w-\[150px\] {
     width: 150px;
@@ -299,15 +263,6 @@
   .w-full {
     width: 100%;
   }
-  .max-w-6 {
-    max-width: calc(var(--spacing) * 6);
-  }
-  .max-w-6xl {
-    max-width: var(--container-6xl);
-  }
-  .max-w-64 {
-    max-width: calc(var(--spacing) * 64);
-  }
   .max-w-65 {
     max-width: calc(var(--spacing) * 65);
   }
@@ -316,15 +271,6 @@
   }
   .max-w-110 {
     max-width: calc(var(--spacing) * 110);
-  }
-  .max-w-300 {
-    max-width: calc(var(--spacing) * 300);
-  }
-  .max-w-\[380px\] {
-    max-width: 380px;
-  }
-  .max-w-lg {
-    max-width: var(--container-lg);
   }
   .flex-grow {
     flex-grow: 1;
@@ -343,9 +289,6 @@
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -377,20 +320,18 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
   .gap-15 {
     gap: calc(var(--spacing) * 15);
   }
-  .gap-30 {
-    gap: calc(var(--spacing) * 30);
-  }
   .gap-x-\[6px\] {
     column-gap: 6px;
+  }
+  .space-x-2 {
+    :where(& > :not(:last-child)) {
+      --tw-space-x-reverse: 0;
+      margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
+      margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
+    }
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
@@ -413,9 +354,6 @@
     border-style: var(--tw-border-style);
     border-width: 2px;
   }
-  .border-gray-300 {
-    border-color: var(--color-gray-300);
-  }
   .border-gray-400 {
     border-color: var(--color-gray-400);
   }
@@ -425,24 +363,15 @@
       border-color: color-mix(in oklab, var(--color-gray-400) 50%, transparent);
     }
   }
+  .border-green-500 {
+    border-color: var(--color-green-500);
+  }
   .bg-\[\#250D44\] {
     background-color: #250D44;
-  }
-  .bg-\[url\] {
-    background-color: url;
   }
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-\[url\(\'\/assets\/footer-bg\.png\'\)\] {
-    background-image: url('/assets/footer-bg.png');
-  }
-  .bg-\[url\(\'assets\/\'\)\] {
-    background-image: url('assets/');
-  }
-  .bg-\[url\(\'assets\/f\'\)\] {
-    background-image: url('assets/f');
   }
   .bg-\[url\(\'assets\/footer-bg\.png\'\)\] {
     background-image: url('assets/footer-bg.png');
@@ -482,9 +411,6 @@
   .to-100\% {
     --tw-gradient-to-position: 100%;
   }
-  .bg-contain {
-    background-size: contain;
-  }
   .bg-cover {
     background-size: cover;
   }
@@ -493,12 +419,6 @@
   }
   .bg-center {
     background-position: center;
-  }
-  .bg-top {
-    background-position: top;
-  }
-  .bg-top-left {
-    background-position: left top;
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
@@ -509,17 +429,8 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
-  .p-5 {
-    padding: calc(var(--spacing) * 5);
-  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
-  }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
-  .p-30 {
-    padding: calc(var(--spacing) * 30);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -527,8 +438,8 @@
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
-  .px-6 {
-    padding-inline: calc(var(--spacing) * 6);
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -536,33 +447,14 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
-  .py-8 {
-    padding-block: calc(var(--spacing) * 8);
-  }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
-  .py-16 {
-    padding-block: calc(var(--spacing) * 16);
-  }
-  .pt-6 {
-    padding-top: calc(var(--spacing) * 6);
-  }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
-  }
-  .pb-3 {
-    padding-bottom: calc(var(--spacing) * 3);
   }
   .text-center {
     text-align: center;
   }
   .text-left {
     text-align: left;
-  }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -571,14 +463,6 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
-  }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
-  .text-6xl {
-    font-size: var(--text-6xl);
-    line-height: var(--tw-leading, var(--text-6xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -594,9 +478,6 @@
   }
   .text-\[16px\] {
     font-size: 16px;
-  }
-  .text-\[60px\] {
-    font-size: 60px;
   }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
@@ -635,26 +516,11 @@
       color: color-mix(in oklab, var(--color-gray-400) 40%, transparent);
     }
   }
-  .text-gray-400\/45 {
-    color: color-mix(in srgb, oklch(70.7% 0.022 261.325) 45%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      color: color-mix(in oklab, var(--color-gray-400) 45%, transparent);
-    }
-  }
   .text-gray-400\/50 {
     color: color-mix(in srgb, oklch(70.7% 0.022 261.325) 50%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       color: color-mix(in oklab, var(--color-gray-400) 50%, transparent);
     }
-  }
-  .text-gray-400\/70 {
-    color: color-mix(in srgb, oklch(70.7% 0.022 261.325) 70%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      color: color-mix(in oklab, var(--color-gray-400) 70%, transparent);
-    }
-  }
-  .text-gray-400\/100 {
-    color: var(--color-gray-400);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
@@ -693,31 +559,6 @@
       display: none;
     }
   }
-  .sm\:min-h-\[450px\] {
-    @media (width >= 40rem) {
-      min-height: 450px;
-    }
-  }
-  .sm\:w-\[150px\] {
-    @media (width >= 40rem) {
-      width: 150px;
-    }
-  }
-  .sm\:max-w-1 {
-    @media (width >= 40rem) {
-      max-width: calc(var(--spacing) * 1);
-    }
-  }
-  .sm\:max-w-3 {
-    @media (width >= 40rem) {
-      max-width: calc(var(--spacing) * 3);
-    }
-  }
-  .sm\:max-w-13 {
-    @media (width >= 40rem) {
-      max-width: calc(var(--spacing) * 13);
-    }
-  }
   .sm\:max-w-136 {
     @media (width >= 40rem) {
       max-width: calc(var(--spacing) * 136);
@@ -748,19 +589,9 @@
       flex-direction: row;
     }
   }
-  .sm\:flex-nowrap {
-    @media (width >= 40rem) {
-      flex-wrap: nowrap;
-    }
-  }
   .sm\:items-center {
     @media (width >= 40rem) {
       align-items: center;
-    }
-  }
-  .sm\:justify-center {
-    @media (width >= 40rem) {
-      justify-content: center;
     }
   }
   .sm\:gap-6 {
@@ -858,18 +689,6 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
-  .sm\:text-xl {
-    @media (width >= 40rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
-    }
-  }
-  .sm\:font-normal {
-    @media (width >= 40rem) {
-      --tw-font-weight: var(--font-weight-normal);
-      font-weight: var(--font-weight-normal);
-    }
-  }
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -890,6 +709,11 @@
 @property --tw-skew-y {
   syntax: "*";
   inherits: false;
+}
+@property --tw-space-x-reverse {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -1012,6 +836,7 @@
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
+      --tw-space-x-reverse: 0;
       --tw-border-style: solid;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
