--- a/src/output.css
+++ b/src/output.css
@@ -369,12 +369,30 @@
   .bg-\[\#250D44\] {
     background-color: #250D44;
   }
+  .bg-\[url\] {
+    background-color: url;
+  }
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-\[url\(\'\'\)\] {
+    background-image: url('');
+  }
+  .bg-\[url\(\'\/assets\/footer-bg\.png\'\)\] {
+    background-image: url('/assets/footer-bg.png');
+  }
+  .bg-\[url\(\'\/assets\/hero-bg\.png\'\)\] {
+    background-image: url('/assets/hero-bg.png');
+  }
+  .bg-\[url\(\'assets\/\'\)\] {
+    background-image: url('assets/');
+  }
   .bg-\[url\(\'assets\/footer-bg\.png\'\)\] {
     background-image: url('assets/footer-bg.png');
+  }
+  .bg-\[url\(\'assets\/hero-bg\.png\'\)\] {
+    background-image: url('assets/hero-bg.png');
   }
   .from-\[\#F7E93F\] {
     --tw-gradient-from: #F7E93F;
