--- a/src/output.css
+++ b/src/output.css
@@ -379,6 +379,12 @@
   .bg-\[url\(\'\'\)\] {
     background-image: url('');
   }
+  .bg-\[url\(\'\.\.\/assets\/hero-bg\.png\'\)\] {
+    background-image: url('../assets/hero-bg.png');
+  }
+  .bg-\[url\(\'\.\/assets\/hero-bg\.png\'\)\] {
+    background-image: url('./assets/hero-bg.png');
+  }
   .bg-\[url\(\'\/assets\/footer-bg\.png\'\)\] {
     background-image: url('/assets/footer-bg.png');
   }
